[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/Credits.gd" type="Script" id=1]

[node name="Credits" type="Node2D"]
script = ExtResource( 1 )

[node name="TeamCredits" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.792157, 0.776471, 0.776471, 1 )

[node name="CreditsTitle" type="RichTextLabel" parent="TeamCredits"]
margin_left = 8.0
margin_top = 128.0
margin_right = 180.0
margin_bottom = 160.0
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
bbcode_text = "[color=black]Developers"
text = "Developers"

[node name="CreditsContents" type="RichTextLabel" parent="TeamCredits"]
margin_left = 8.0
margin_top = 184.0
margin_right = 1016.0
margin_bottom = 544.0
bbcode_enabled = true
bbcode_text = "[color=black]Macy Drew - Project Manager, Creative Director, NPC Objects

Emily Hotz - Dialogue System, Save Data, Game Flow

Ethan Martin - Python Integration, Cross Platform Compatability, Tutorial Content

Nayab Rehmat - Puzzle Designer, Player Animation Integration, Documentation

Zach Spelce - Graphics Coordinator, Terminal Design, Player Interaction"
text = "Macy Drew - Project Manager, Creative Director, NPC Objects

Emily Hotz - Dialogue System, Save Data, Game Flow

Ethan Martin - Python Integration, Cross Platform Compatability, Tutorial Content

Nayab Rehmat - Puzzle Designer, Player Animation Integration, Documentation

Zach Spelce - Graphics Coordinator, Terminal Design, Player Interaction"

[node name="SpriteCredits" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.792157, 0.776471, 0.776471, 1 )

[node name="CreditsTitle" type="RichTextLabel" parent="SpriteCredits"]
margin_left = 8.0
margin_top = 128.0
margin_right = 180.0
margin_bottom = 160.0
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
bbcode_text = "[color=black]Character Sprites"
text = "Character Sprites"

[node name="CreditsContents" type="RichTextLabel" parent="SpriteCredits"]
margin_left = 8.0
margin_top = 184.0
margin_right = 1016.0
margin_bottom = 544.0
bbcode_enabled = true
bbcode_text = "[color=black]Sprites by: Johannes Sjölund (wulax), Michael Whitlock (bigbeargames), Matthew Krohn (makrohn), Nila122, David Conway Jr. (JaidynReiman), Carlo Enrico Victoria (Nemisys), Thane Brimhall (pennomi), bluecarrot16, Luke Mehl, Benjamin K. Smith (BenCreating), ElizaWy, MuffinElZangano, Durrani, kheftel, Stephen Challener (Redshrike), TheraHedwig, Evert, Pierre Vigier (pvigier), Eliza Wyatt (ElizaWy), Johannes Sj?lund (wulax), Sander Frenken (castelonia), dalonedrau, Lanea Zimmerman (Sharm), laetissima, kirts, Mark Weyer, Joe White, Mandi Paugh, William.Thompsonj, Manuel Riecke (MrBeast), Barbara Riviera, thecilekli, Yamilian, Fabzy, Skorpio, Radomir Dopieralski, Emilio J. Sanchez-Sierra, kcilds/Rocetti/Eredah, Cobra Hubbard (BlueVortexGames), DCSS authors, Marcel van de Steeg (MadMarcel), DarkwallLKE, Charles Sanchez (CharlesGabriel), Shaun Williams, Tuomo Untinen (reemax), Stafford McIntyre, PlatForge project, Tracy, Daniel Eddeland (daneeklu), William.Thomsponj, Joshua Taylor, Zi Ye, AntumDeluge, drjamgo@hotmail.com, Lori Angela Nagel (jastiv), gr3yh47, pswerlang, XOR, tskaufma, Inboxninja, Dr. Jamgo, LordNeo Sprites contributed as part of the Liberated Pixel Cup project from OpenGameArt.org: http://opengameart.org/content/lpc-collection License: Creative Commons Attribution-ShareAlike 3.0 (CC-BY-SA 3.0) http://creativecommons.org/licenses/by-sa/3.0/ Detailed credits: Fram Game/sprite_credits.csv"
text = "Sprites by: Johannes Sjölund (wulax), Michael Whitlock (bigbeargames), Matthew Krohn (makrohn), Nila122, David Conway Jr. (JaidynReiman), Carlo Enrico Victoria (Nemisys), Thane Brimhall (pennomi), bluecarrot16, Luke Mehl, Benjamin K. Smith (BenCreating), ElizaWy, MuffinElZangano, Durrani, kheftel, Stephen Challener (Redshrike), TheraHedwig, Evert, Pierre Vigier (pvigier), Eliza Wyatt (ElizaWy), Johannes Sj?lund (wulax), Sander Frenken (castelonia), dalonedrau, Lanea Zimmerman (Sharm), laetissima, kirts, Mark Weyer, Joe White, Mandi Paugh, William.Thompsonj, Manuel Riecke (MrBeast), Barbara Riviera, thecilekli, Yamilian, Fabzy, Skorpio, Radomir Dopieralski, Emilio J. Sanchez-Sierra, kcilds/Rocetti/Eredah, Cobra Hubbard (BlueVortexGames), DCSS authors, Marcel van de Steeg (MadMarcel), DarkwallLKE, Charles Sanchez (CharlesGabriel), Shaun Williams, Tuomo Untinen (reemax), Stafford McIntyre, PlatForge project, Tracy, Daniel Eddeland (daneeklu), William.Thomsponj, Joshua Taylor, Zi Ye, AntumDeluge, drjamgo@hotmail.com, Lori Angela Nagel (jastiv), gr3yh47, pswerlang, XOR, tskaufma, Inboxninja, Dr. Jamgo, LordNeo Sprites contributed as part of the Liberated Pixel Cup project from OpenGameArt.org: http://opengameart.org/content/lpc-collection License: Creative Commons Attribution-ShareAlike 3.0 (CC-BY-SA 3.0) http://creativecommons.org/licenses/by-sa/3.0/ Detailed credits: Fram Game/sprite_credits.csv"

[node name="ArtCredits" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.792157, 0.776471, 0.776471, 1 )

[node name="CreditsTitle" type="RichTextLabel" parent="ArtCredits"]
margin_left = 8.0
margin_top = 72.0
margin_right = 180.0
margin_bottom = 104.0
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
bbcode_text = "[color=black]Art Assets"
text = "Art Assets"

[node name="CreditsContents" type="RichTextLabel" parent="ArtCredits"]
margin_left = 8.0
margin_top = 128.0
margin_right = 1016.0
margin_bottom = 632.0
bbcode_enabled = true
bbcode_text = "[color=black]Skorpio's SciFi Sprite Pack by Skorpio, CC-BY-SA 3.0: https://opengameart.org/content/lpc-skorpios-scifi-sprite-pack

Sci-Fi Tileset by Viktor Hahn, CC-BY 4.0:
https://opengameart.org/content/32x32-sci-fi-tileset

Pixel Potion Set by yafarida, CC0:
https://opengameart.org/content/pixel-potion-set-16x16

Free-Space Station-Game Asset by Jonik9i, CC0:
https://jonik9i.itch.io/free-space-station-game-asset

Tech Dungeon Roguelite Asset Pack by Pupkin:
https://trevor-pupkin.itch.io/tech-dungeon-roguelite

Petri Dish by JoyPixels:
https://emojipedia.org/joypixels/7.0/petri-dish/

????:
???"
text = "Skorpio's SciFi Sprite Pack by Skorpio, CC-BY-SA 3.0: https://opengameart.org/content/lpc-skorpios-scifi-sprite-pack

Sci-Fi Tileset by Viktor Hahn, CC-BY 4.0:
https://opengameart.org/content/32x32-sci-fi-tileset

Pixel Potion Set by yafarida, CC0:
https://opengameart.org/content/pixel-potion-set-16x16

Free-Space Station-Game Asset by Jonik9i, CC0:
https://jonik9i.itch.io/free-space-station-game-asset

Tech Dungeon Roguelite Asset Pack by Pupkin:
https://trevor-pupkin.itch.io/tech-dungeon-roguelite

Petri Dish by JoyPixels:
https://emojipedia.org/joypixels/7.0/petri-dish/

????:
???"

[node name="ThanksForPlaying" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.792157, 0.776471, 0.776471, 1 )

[node name="CreditsTitle" type="RichTextLabel" parent="ThanksForPlaying"]
margin_left = 336.0
margin_top = 272.0
margin_right = 516.0
margin_bottom = 304.0
rect_scale = Vector2( 2, 2 )
bbcode_enabled = true
bbcode_text = "[color=black]Thanks for playing!"
text = "Thanks for playing!"

[node name="QuitButton" type="Button" parent="ThanksForPlaying"]
margin_left = 448.0
margin_top = 336.0
margin_right = 576.0
margin_bottom = 376.0
text = "Quit"

[node name="CreditsLabel" type="RichTextLabel" parent="."]
margin_left = 384.0
margin_top = 8.0
margin_right = 456.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
bbcode_enabled = true
bbcode_text = "[color=black]Credits"
text = "Credits"

[connection signal="pressed" from="ThanksForPlaying/QuitButton" to="." method="_on_QuitButton_pressed"]
